--- a/demoRegression-master/simpleLM.rmd
+++ b/demoRegression-master/simpleLM.rmd
@@ -36,8 +36,14 @@ abline(simp)
 summary.lm(simp)
 ```
 
+## Model LENGTH ~ HEADLEN  this is an example  
 
-
+```{r}
+simp <- lm(LENGTH~HEADLEN,data=bears)
+plot(LENGTH~HEADLEN,data=bears)
+abline(simp)
+summary.lm(simp)
+```
 
 
 
