--- a/demoRegression-master/simpleLM.rmd
+++ b/demoRegression-master/simpleLM.rmd
@@ -56,8 +56,9 @@ Summary of all the plots
 
 Neck: The RSE for this graph was 43.91 while the Adjusted R-squared was 0.7476
 
-Age: The RSE for this graph was 81.47 while the Adjusted R-squared was 0.5073 
+Headlen: The RSE for this graph was 67.81 while the Adjusted R-squared was  0.8434 
 
+Age: The RSE for this graph was 81.47 while the Adjusted R-squared was 0.5073 
 
 
 
