--- a/demoRegression-master/simpleLM.rmd
+++ b/demoRegression-master/simpleLM.rmd
@@ -54,9 +54,14 @@ abline(simp)
 summary.lm(simp)
 ```
 
-## Model WEIGHT ~ HEADWTH  this is an example  
+## Model WEIGHT ~ LENGTH  this is an example  
 
-
+```{r}
+simp <- lm(WEIGHT~LENGTH,data=bears)
+plot(WEIGHT~LENGTH,data=bears)
+abline(simp)
+summary.lm(simp)
+```
 
 
 
